--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inventaire avec Codes-Barres</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+    <script src="quagga.min.js"></script>
+    <script src="app.js" defer></script> <!-- Ajout de defer pour charger l'app.js après le DOM -->
 </head>
 <body>
     <header>
@@ -16,22 +19,29 @@
         <!-- Importer la liste d'items via un fichier CSV -->
         <section>
             <h2>Importer la liste d'items (CSV)</h2>
-            <form action="/upload" method="POST" enctype="multipart/form-data">
-                <label for="csvFileInput">Choisissez un fichier CSV :</label>
-                <input type="file" name="file" id="csvFileInput" accept=".csv" required>
-                <br><br>
-                <button type="submit">Charger et traiter la liste</button>
-            </form>
+            <label for="csvFileInput">Choisissez un fichier CSV :</label>
+            <input type="file" name="file" id="csvFileInput" accept=".csv" required>
         </section>
 
         <!-- Liste des items -->
         <section>
             <h2>Liste d'items</h2>
             <div id="itemContainer">
-                <ul id="itemList"></ul>
+                <table id="itemList">
+                    <thead>
+                        <tr>
+                            <th>Code-barres</th>
+                            <th>Description</th>
+                            <th>Colonne 12</th>
+                            <th>Colonne 4</th>
+                            <th>Colonne 3</th>
+                        </tr>
+                    </thead>
+                    <tbody></tbody>
+                </table>
             </div>
         </section>
-        
+
         <!-- Entrée manuelle du code-barres -->
         <section>
             <h3>Entrer un code-barres manuellement :</h3>
@@ -46,20 +56,16 @@
                 <div id="scanner">
                     <video id="video" autoplay playsinline></video> <!-- Flux vidéo de la caméra -->
                 </div>
+                <div id="scannerContainer"></div> <!-- Container pour le scanner -->
             </div>
-        </section>
-
-        <!-- Téléchargement des rapports -->
-        <section>
-            <h3>Télécharger les rapports :</h3>
-            <button onclick="downloadSummary('found')">Télécharger les items trouvés (PDF)</button>
-            <button onclick="downloadSummary('not_found')">Télécharger les items non trouvés (PDF)</button>
+            <div id="reportsSection">
+                <h3>Télécharger les rapports :</h3>
+                <button onclick="downloadSummary('found')">Télécharger les items trouvés (PDF)</button>
+                <button onclick="downloadSummary('not_found')">Télécharger les items non trouvés (PDF)</button>
+            </div>
         </section>
     </main>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-    <script src="quagga.min.js"></script>
-    <script src="app.js"></script>
     <script>
         // Initialisation du flux vidéo
         const video = document.getElementById('video');
@@ -71,31 +77,6 @@
             .catch(function(error) {
                 console.error("Erreur d'accès à la caméra : ", error);
             });
-
-        function downloadSummary(type) {
-            const { jsPDF } = window.jspdf;
-            const doc = new jsPDF();
-
-            let title = type === 'found' ? 'Items trouvés' : 'Items non trouvés';
-            doc.text(title, 10, 10);
-
-            const items = type === 'found' ? foundItems : notFoundItems; 
-            const startY = 20; 
-
-            items.forEach((item, index) => {
-                const y = startY + (index * 10); 
-
-                if (type === 'found') {
-                    doc.setTextColor(0, 128, 0); 
-                } else {
-                    doc.setTextColor(255, 0, 0);
-                }
-
-                doc.text(item.name, 10, y); 
-            });
-
-            doc.save(`${title}.pdf`);
-        }
     </script>
 </body>
 </html>
